# amd_timeseries

./: .env.example  .gitignore  README.md  config.py  main.py  requirements.txt  setup.bat  setup.cfg  setup.py  setup.sh
notebooks/: original_notebook.ipynb
outputs/results/: results_comparison.csv
src/: __init__.py
src/data/: __init__.py  data_loader.py
src/features/: __init__.py  feature_engineering.py
src/models/: __init__.py  evaluate.py  train.py
src/utils/: __init__.py  helpers.py
tests/: __init__.py  test_data_loader.py  test_evaluate.py  test_feature_engineering.py
