[metadata]
name = amd-timeseries
version = 1.0.0

[options]
python_requires = >=3.10
packages = find:

[tool:pytest]
testpaths = tests
addopts =
    --verbose
    --tb=short
    --cov=src
    --cov-report=term-missing
    --cov-report=html:outputs/coverage

[flake8]
max-line-length = 100
exclude =
    .venv,
    __pycache__,
    notebooks,
    outputs
ignore = E203, W503
